<resources>
    <string name="app_name">RecMan</string>
    <string name="action_settings">Settings</string>
    <string name="action_accounts">Accounts</string>
    <string name="action_profiles">Profiles</string>
    <string name="profile_details">Profile details</string>
    <string name="action_home">Home</string>
    <string name="audio_format">Audio format</string>
    <string name="source_folder">Source folder</string>
    <string name="file_handling">File handling</string>
    <string name="select_folder">Select folder</string>
    <string name="destination">Destination</string>
    <string name="save_profile">Save profile</string>
    <string name="delete_profile">Delete profile</string>
    <string name="use_profile">Use profile</string>
    <string name="set_default">Set as default</string>
    <string name="is_default">Is default</string>
    <string name="name">Name</string>
    <string name="error_title">Error!</string>
    <string name="close">Close</string>
    <string-array name="file_handlings">
        <item>Take all from today</item>
        <item>Take last one</item>
        <item>Take all</item>
    </string-array>

    <string-array name="audio_formats">
        <item>MP3</item>
        <item>AAC</item>
        <item>M4A</item>
        <item>FLAC</item>
        <item>WAVE</item>
        <item>WMA</item>
    </string-array>

    <string-array name="destinations">
        <item>OneDrive</item>
        <item>Google Drive</item>
    </string-array>

    <string name="title_activity_home">Home Activity</string>
    <string name="title_home">Home</string>
    <string name="title_profiles">Profiles</string>
    <string name="title_account">Account</string>
    <string name="dialog_set_profile_name">Give a name to a new profile:</string>
    <string name="ok">OK</string>
    <string name="skip">Skip</string>
    <string name="cancel">Cancel</string>
    <string name="name_profile_hint">Type a name...</string>

    <string name="toast_profile_created">Profile successfully created!</string>
    <string name="toast_profile_set_default">Profile successfully set as default!</string>
    <string name="toast_profile_deleted">Profile successfully deleted!</string>
    <string name="toast_database_error">An error occurred during database operation. Please try again.</string>
    <string name="toast_files_converted">Audio files have been successfully converted!</string>
    <string name="toast_conversion_error">An error occurred during audio conversion. Please try again.</string>
    <string name="toast_connect_error">Error connecting to Microsoft Graph\nCheck logcat for details</string>
    <string name="toast_sign_out">You have been signed out</string>
    <string name="send_mail_toast_text_error">Error sending email\nCheck logcat for details</string>
    <string name="warning_client_id_redirect_uri_incorrect">The client ID or redirect URI is not valid. Enter a valid client ID and redirect URI in the Constants.java file and run again</string>
    <string name="no_profiles_yet">You don\'t have any profiles yet!</string>

    <string name="connect_button_text">Connect to Microsoft Graph</string>
    <string name="sign_out_menu_item_text">Sign out</string>
    <string name="title_text">Hi\u00A0</string>
    <string name="description_text">\nYou\'re now connected to Microsoft Graph. Tap the button below to go back to the Home screen and upload the files to One Drive using the Microsoft Graph API.\n</string>

    <string name="title_text_error">Oops!</string>
    <string name="connect_text_error">\nSorry, can\'t connect to Microsoft Graph.</string>
    <string name="toast_user_not_found_error">Sorry, can\'t find the user for this account</string>
    <string name="already_authenticated_text">You have already successfully connected to Microsoft Graph.</string>

    <string name="default_one_drive_folder">RecMan\\</string>
</resources>
